[package]
name = "cliw_clap_quick_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = [
    "cargo",
] }

cliw = { version = "0.1.0" , features = [
    "alert",    # Show output on popup alert on web/wasm
    "urlargs",  # Get args from the URL on web/wasm
]}
