[package]
name = "cliw_clap_quick_derive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = [
    "cargo",
    "derive",
] }

# We will use cliw here just for the example program output of the args.
# Your program doesn't need to depend on cliw for we-clap to work 
cliw = { version = "0.1.0" , features = [
    "alert",
    "urlargs",
]}
